--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,4 +11,8 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+
+  <canvas id="myCanvas" width="500" height="500" style="border: 1px solid #000"></canvas>
+  <button id="neu">generate</button>
+  <div class="gyro"></div>
 </ion-content>
