log gyro data and test paperjs

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
 
-  <canvas id="myCanvas" width="500" height="500" style="border: 1px solid #000"></canvas>
+  <canvas id="myCanvas" style="border: 1px solid #000"></canvas>
   <button id="neu">generate</button>
-  <div class="gyro"></div>
+  <button id="gyro">Gyro Data</button>
 </ion-content>
