--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,9 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -14,5 +15,10 @@
 
   <canvas id="myCanvas" width="500" height="500" style="border: 1px solid #000"></canvas>
   <button id="neu">generate</button>
-  <div class="gyro"></div>
+  <button id="gyro">Gyro Data</button>
+  <svg width="300" height="100" style="display: none;" id="svg">
+    <g id="firstLetter" stroke-linecap="round" fill-rule="evenodd" font-size="9pt" stroke="#000" stroke-width="0.25mm" fill="none" style="stroke:#000;stroke-width:0.25mm;fill:none"><path d="M 49.125 64 L 49.125 0 L 52.5 0 L 52.5 63.375 A 39.301 39.301 0 0 1 51.572 72.163 Q 49.917 79.381 45.313 84.406 A 23.815 23.815 0 0 1 29.585 92.086 A 33.101 33.101 0 0 1 26.25 92.25 Q 13.5 92.25 6.75 85.438 Q 0 78.625 0 65.938 L 3.375 65.938 A 34.684 34.684 0 0 0 3.962 72.529 Q 4.701 76.344 6.372 79.309 A 17.782 17.782 0 0 0 9.094 82.969 A 17.949 17.949 0 0 0 16.512 87.489 Q 19.398 88.442 22.919 88.74 A 39.558 39.558 0 0 0 26.25 88.875 A 24.364 24.364 0 0 0 34.234 87.618 A 20.68 20.68 0 0 0 42.594 82.188 A 22.859 22.859 0 0 0 48.119 71.948 Q 49.055 68.313 49.125 64 Z" vector-effect="non-scaling-stroke"/></g>
+    <g id="secondLetter" stroke-linecap="round" fill-rule="evenodd" font-size="9pt" stroke="#000" stroke-width="0.25mm" fill="none" style="stroke:#000;stroke-width:0.25mm;fill:none"><path d="M 29.313 91.001 L 0 91.001 L 0 0.001 L 23.938 0.001 Q 33.139 0.001 39.531 2.343 A 23.699 23.699 0 0 1 46.156 5.969 A 19.344 19.344 0 0 1 53.26 18.199 A 29.188 29.188 0 0 1 53.688 23.313 A 26.762 26.762 0 0 1 52.996 29.552 A 19.475 19.475 0 0 1 49.5 37.001 A 18.057 18.057 0 0 1 40.643 43.166 A 24.193 24.193 0 0 1 37.687 43.938 A 22.772 22.772 0 0 1 52.062 51.407 A 21.017 21.017 0 0 1 57.812 65.938 A 28.869 28.869 0 0 1 56.753 73.967 A 21.559 21.559 0 0 1 50.281 84.282 A 24.961 24.961 0 0 1 40.362 89.597 Q 35.454 91.001 29.313 91.001 Z M 31 46.063 L 3.375 46.063 L 3.375 87.626 L 29.688 87.626 A 37.701 37.701 0 0 0 37.011 86.958 Q 41.323 86.103 44.685 84.156 A 20.441 20.441 0 0 0 47.844 81.907 A 18.708 18.708 0 0 0 54.122 70.282 A 27.116 27.116 0 0 0 54.438 66.063 A 19.014 19.014 0 0 0 52.844 58.196 A 18.484 18.484 0 0 0 48.063 51.844 A 22.292 22.292 0 0 0 38.832 47.071 Q 35.258 46.138 31 46.063 Z M 3.375 3.376 L 3.375 42.688 L 25.188 42.688 Q 37.625 42.688 43.938 37.907 Q 50.08 33.254 50.245 23.6 A 31.41 31.41 0 0 0 50.25 23.063 A 20.682 20.682 0 0 0 48.446 14.115 Q 44.336 5.453 30.861 3.774 A 55.545 55.545 0 0 0 24.687 3.376 L 3.375 3.376 Z" vector-effect="non-scaling-stroke"/></g>
+  </svg>
+  <div id="test"></div>
 </ion-content>
