ADDED seperate calulate and drawing function

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
     <button id="invertColors" (click)="invertColors()"><img src="/assets/icon/baseline-invert_colors-24px.svg"></button>
     <button id="colorize" (click)="colorize()"><img src="/assets/icon/color-palette.svg"></button>
     <button id="camera" (click)="saveScreenShot()"><img src="/assets/icon/baseline-camera_alt-24px.svg"></button>
-    <button id="neu">generate</button>
+    <button id="neu" (click)="generateSign()">generate</button>
   </div>
   <svg width="300" height="100" style="display: none;" id="svg">
     <g id="firstLetter" stroke-linecap="round" fill-rule="evenodd" font-size="9pt" stroke="#000" stroke-width="0.25mm" fill="none" style="stroke:#000;stroke-width:0.25mm;fill:none"><path d="M 49.125 64 L 49.125 0 L 52.5 0 L 52.5 63.375 A 39.301 39.301 0 0 1 51.572 72.163 Q 49.917 79.381 45.313 84.406 A 23.815 23.815 0 0 1 29.585 92.086 A 33.101 33.101 0 0 1 26.25 92.25 Q 13.5 92.25 6.75 85.438 Q 0 78.625 0 65.938 L 3.375 65.938 A 34.684 34.684 0 0 0 3.962 72.529 Q 4.701 76.344 6.372 79.309 A 17.782 17.782 0 0 0 9.094 82.969 A 17.949 17.949 0 0 0 16.512 87.489 Q 19.398 88.442 22.919 88.74 A 39.558 39.558 0 0 0 26.25 88.875 A 24.364 24.364 0 0 0 34.234 87.618 A 20.68 20.68 0 0 0 42.594 82.188 A 22.859 22.859 0 0 0 48.119 71.948 Q 49.055 68.313 49.125 64 Z" vector-effect="non-scaling-stroke"/></g>
