Add gyroscope to init page
add gyroscope to init page, change size of the canvas

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
   <div class="canvas-container">
-    <canvas id="myCanvas" width="500" height="500" style="border: 1px solid #000"></canvas>
+    <canvas id="myCanvas" style="border: 1px solid #000"></canvas>
     <img id="imageMask" src=" ">
   </div>
   <div class="settings">
