ADDED shortid to dependencies

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,9 +14,9 @@
   </div>
   <div class="settings">
     <button id="gyro">Gyro Data</button>
-    <button id="invertColors" (click)="invertColors()"><img src="/assets/icon/baseline-invert_colors-24px.svg"></button>
-    <button id="colorize" (click)="colorize()"><img src="/assets/icon/color-palette.svg"></button>
-    <button id="camera" (click)="saveScreenShot()"><img src="/assets/icon/baseline-camera_alt-24px.svg"></button>
+    <button id="invertColors" (click)="invertColors()"><img src="assets/icon/baseline-invert_colors-24px.svg"></button>
+    <button id="colorize" (click)="colorize()"><img src="assets/icon/color-palette.svg"></button>
+    <button id="camera" (click)="saveScreenShot()"><img src="assets/imgs/logo.png"></button>
     <button id="neu" (click)="generateSign()">generate</button>
   </div>
   <svg width="300" height="100" style="display: none;" id="svg">
