ADDED background color to paper view and ADDED toast message when saving image to gallery

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,8 +9,7 @@
 
 <ion-content padding>
   <div class="canvas-container">
-    <canvas id="myCanvas" style="border: 1px solid #000"></canvas>
-    <img id="imageMask" src=" ">
+    <canvas id="myCanvas"></canvas>
   </div>
   <div class="settings">
     <button id="gyro">Gyro Data</button>
