--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
   <div class="canvas-container">
-    <canvas id="myCanvas"></canvas>
+    <canvas id="myCanvas" width="500px" height="500px"></canvas>
   </div>
   <div class="settings">
     <button id="gyro">Gyro Data</button>
