Change text at last signerate slide

--- a/src/pages/signerate/signerate.html
+++ b/src/pages/signerate/signerate.html
@@ -83,7 +83,7 @@
       </ion-list>
       <p>
         <ion-icon name="compass"></ion-icon>
-        Schütteln Sie Ihr Smartphone um das Logo zu generieren.
+        Schüttel dein Smartphone um das Logo zu generieren.
       </p>
       <button ion-button color="primary" (click)="save()">Generiere Logo</button>
     </ion-slide>
