--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -8,29 +8,61 @@
 </ion-header>
 
 <ion-content padding>
-  <h1>Tutorial zur Nutzung der App</h1>
-  <h2>Menüpunkt Home</h2>
-  <p>Hier wird das Logo(Sign) generiert. Am unteren Rand des Bildschirms befinden sich verschiedene Buttons, die zur Interaktion genutzt werden können. Im folgenden werden diese beschreiben:</p>
-  <ul>
-    <li>
-      <img src="assets/icon/baseline-invert_colors-24px.svg">
-      <p>Die Farben werden Invertiert</p>
-    </li>
-    <li>
-      <img src="assets/icon/color-palette.svg">
-      <p>Die Farben der Buchstaben verändern sich</p>
-    </li>
-    <li>
-      <img src="assets/icon/baseline-camera_alt-24px.svg">
-      <p>Ein Bild wird gespeichert</p>
-    </li>
-    <li>
-      <button>Generate</button>
-      <p>Es wird ein neues Arragement des Logos erstellt</p>
-    </li>
-  </ul>
-  <h2>Menüpunkt Signerate</h2>
-  <p>Hier können die Initialien eingegeben, eine Schriftart ausgewählt, die ausgewählten Parameter in einer Vorschau angesehen und die Eingaben bestätigt werden. Wenn ein Parameter nicht Ordnungsgemäß gesetzt wurde, wird eine Fehlermeldung ausgegeben.</p>
-  <h2>Schüttelfunktion</h2>
-  <p>Sowohl mit iOS, als auch Android Smartphones lässt sich das Arragement des Logos mit einer speziellen Funktion ändern. Hierfür muss lediglich das Smartphone geschüttelt werden.</p>
+  <h1>Signerate Tutorial</h1>
+  <accordion>
+    <accordion-group heading="Menüpunkt Home">
+      <p>Folgende Buttons findest du auf der Home-Seite der App. Hier kannst du dein Logo mit folgenden Funktionen weiter bearbeiten:</p>
+      <ul>
+        <li>
+          <img src="assets/icon/baseline-invert_colors-24px.svg">
+          <p>Die Farben werden Invertiert</p>
+        </li>
+        <li>
+          <img src="assets/icon/color-palette.png">
+          <p>Die Farben der Buchstaben verändern sich</p>
+        </li>
+        <li>
+          <img src="assets/icon/baseline-camera_alt-24px.svg">
+          <p>Ein Bild wird gespeichert</p>
+        </li>
+        <li>
+          <img src="assets/icon/dice.png">
+          <p>Es wird ein neues Arragement des Logos erstellt</p>
+        </li>
+      </ul>
+    </accordion-group>
+    <accordion-group heading="Menüpunkt Signerate">
+      <div class="signerate">
+        <img src="assets/imgs/logo.png">
+        <ol>
+          <li>
+            <p>Gib deine Initalien mit denen du ein Logo generieren willst ein. </p>
+          </li>
+          <li>
+            <p>Wähle die Schriftart deines Logos aus. Jede Schriftart gibt deinem Logo eine andere Wirkung.</p>
+          </li>
+          <li>
+            <p>Wähle einen Schriftschnitt, der zu deinem Logo passt.</p>
+          </li>
+          <li>
+            <p>Begutachte deine Konfiguration in der Vorschau. Falls du doch noch etwas ändern willst, kannst du zu jedem Schritt einfach über die Navigaiton zurückgehen.</p>
+          </li>
+          <li>
+            <p><b>Signerate!</b> Schüttel einfach dein Handy und lass dich überraschen.</p>
+          </li>
+        </ol>
+      </div>
+    </accordion-group>
+    <accordion-group heading="Schüttelfunktion">
+      <div class="shake">
+        <img src="assets/icon/dice.png">
+        <span>
+          <h5>Support:</h5>
+          <p>Sowohl bei iOS, als auch Android Smartphones wird die Gyroskopfunktion unterstützt.</p>
+          <h5>Funktion:</h5>
+          <p>Schüttel einfach das Handy und das Arrangement wird neu generiert.</p>
+        </span>
+      </div>
+    </accordion-group>
+  </accordion>
 </ion-content>
